--- a/src/main/resources/fr/project/miniprojet3/hello-view.fxml
+++ b/src/main/resources/fr/project/miniprojet3/hello-view.fxml
@@ -3,13 +3,31 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="fr.project.miniprojet3.HelloController">
+<VBox alignment="CENTER" prefHeight="546.0" prefWidth="616.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.project.miniprojet3.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
+   <ImageView onMouseClicked="#imageClicked" fx:id="roi" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="C:\Users\natha\IdeaProjects\miniprojet3\src\main\mesImages\roi.png" />
+      </image>
+   </ImageView>
 
     <Label fx:id="welcomeText" />
+   <Pane prefHeight="142.0" prefWidth="571.0">
+      <children>
+         <Button layoutX="14.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="95.0" />
+      </children>
+   </Pane>
     <Button onAction="#onHelloButtonClick" text="Hello!" textFill="#d40a0a" />
+   <ImageView fx:id="dos" fitHeight="150.0" fitWidth="200.0" onMouseClicked="#imageClicked" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image  url="C:\Users\natha\IdeaProjects\miniprojet3\src\main\mesImages\dos.JPEG" />
+      </image>
+   </ImageView>
 </VBox>
