--- a/src/main/resources/fr/project/miniprojet3/hello-view.fxml
+++ b/src/main/resources/fr/project/miniprojet3/hello-view.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="546.0" prefWidth="616.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.project.miniprojet3.HelloController">
+<VBox fx:id="root" alignment="CENTER" prefHeight="546.0" prefWidth="616.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.project.miniprojet3.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
